--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Retrieve code
-        users: actions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: Say hello to the world
         run: echo "Hello, World!"
