--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,5 +21,11 @@ jobs:
       - name: Run hello_with_timestamp.py
         run: |
           chmod +x hello_with_timestamp.py
-          output=$(./hello_with_timestamp.py)
-          echo "Script output: $output"
+          ./hello_with_timestamp.py > hello_timestamp_output.txt
+
+      - name: Upload the output
+        uses: actions/upload-artifact@v3
+        with:
+          name: hello_timestamp_output
+          path: hello_timestamp_output.txt
+
